# Advanced_Plans_Parser

./: .gitignore  Alpha_Completion_Path.md  Bug_Analysis_Report.md  CLEANUP_LOG.md  Code_Grade_Report.md  DISMISS_FEATURE_PLAN.md  Executive_Summary.md  GIT_OPERATIONS_GUIDE.md  GUI_ML_Sync_Plan.md  ML_Assessment_and_Upgrade_Roadmap.md  PipelineDetail.html  PipelineDiagram.html  README.md  REFACTORING_PLAN_PHASES_3-5.md  RESTRUCTURE_AGENT_INSTRUCTIONS.md  SURYA_MIGRATION_ISSUES.md  SURYA_POST_MIGRATION_CONCERNS.md  TRAINING_DATA_RESET_PLAN.md  UI_RESTRUCTURE_PLAN.md  VECTOR_SYMBOL_RECOVERY_PLAN.md  _check_db.py  _profile_deep.py  _profile_tocr.py  _profile_vs_deep.py  _run_page2.py  check_abbrev2.py  check_transport.py  debug_b73_b82.py  debug_block80.py  debug_blocks.py  debug_chars.py  debug_chars_full.py  debug_chars_l95.py  debug_chars_l95b.py  debug_column_boundary.py  debug_columns.py  debug_coords.py  debug_find_page.py  debug_gutter.py  debug_headers.txt  (+41 more)
.github/: copilot-instructions.md
backup_pre_tocr_patch/: config.py  grouping.py
data/: candidate_method_stats.json  corrections.db  corrections.db-shm  corrections.db-wal  drift_stats.json  element_classifier.pkl  ibc2021_egress.json  label_registry.json  producer_method_stats.json  training_data.jsonl  training_data_stage2.jsonl
docs/: Annotation_Tab_Guide.md  CLEANUP_LOG.md  CODE_REVIEW_ISSUES.md  EVENT_HANDLER_DECOMPOSITION_PLAN.md  EXECUTION_PLAN.md  GUI_ML_WORKFLOW_DRAFT.md  INCREMENTAL_ONLINE_LEARNING_PLAN (1).md  LLM_BUDGET.md  ML_Review_and_Roadmap.md  ML_TRAINER_TOOLTIP_LIST_DRAFT.md  ML_Training_Guide.html  OCR_INTEGRATION.md  (+15 more)
(+412 files in other folders)
